--- a/recipe.html
+++ b/recipe.html
@@ -15,9 +15,13 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>        
     
         <div main-container id="root">
-            <div ingredient-list id="ingredient-list"></div>
-            <div results-list id="results-list">
-                <div filters id="filters"></div>
+            <div left-pane>
+                <div image-area id="image-area"></div>
+                <div back-area></div>
+            </div>
+            <div right-pane>
+                <div recipe-name-area></div>
+                <div tab-area></div>
             </div>
         </div>
     
