--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     
         <div main-container id="root">
             <div ingredient-list id="ingredient-list"></div>
+
+            <!-- Alex -->
             <div results-list id="results-list">
                 <div filters id="filters"></div>
             </div>
