--- a/index.html
+++ b/index.html
@@ -10,20 +10,35 @@
         <title>iPantry Home</title>
     </head>
     <body>
-
-        <!-- Bootstrap Stuff -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>        
-    
         <div main-container id="root">
             <!-- Adrianna's Part -->
             <div ingredient-list id="ingredient-list"></div>
 
             <!-- Alex -->
-            <div results-list id="results-list">
-                <div filters id="filters"></div>
+            <div class="results-list" id="results-list">
+                <div class="filters" id="filters">
+                    <div class="filter-controls form-check form-switch">
+                        <input type="checkbox" class="form-check-input" id="veganFilter" role="switch">
+                        <label class="form-check-label" for="veganFilter">Vegan</label>
+                    </div>
+                    <div class="filter-controls form-check form-switch">
+                        <input type="checkbox" class="form-check-input" id="vegetarianFilter" role="switch">
+                        <label class="form-check-label" for="vegetarianFilter">Vegetarian</label>
+                    </div>
+                    <div class="filter-controls form-check form-switch">
+                        <input type="checkbox" class="form-check-input" id="treeFilter" role="switch">
+                        <label class="form-check-label" for="treeFilter">Tree Nuts</label>
+                    </div>
+                    <div class="filter-controls form-check form-switch">
+                        <input type="checkbox" class="form-check-input" id="dairyFilter" role="switch">
+                        <label class="form-check-label" for="dairyFilter">Dairy</label>
+                    </div>
+                </div>
             </div>
         </div>
-    
+
+        <!-- Bootstrap Stuff -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>        
     </body>
 
 </html>
