--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <!-- Bootstrap Stuff -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
+        <link href="homestyle.css" rel="stylesheet">
+
         <title>iPantry Home</title>
     </head>
     <body>
@@ -16,23 +17,70 @@
 
             <!-- Alex -->
             <div class="results-list" id="results-list">
-                <div class="filters" id="filters">
-                    <div class="filter-controls form-check form-switch">
-                        <input type="checkbox" class="form-check-input" id="veganFilter" role="switch">
-                        <label class="form-check-label" for="veganFilter">Vegan</label>
-                    </div>
-                    <div class="filter-controls form-check form-switch">
-                        <input type="checkbox" class="form-check-input" id="vegetarianFilter" role="switch">
-                        <label class="form-check-label" for="vegetarianFilter">Vegetarian</label>
-                    </div>
-                    <div class="filter-controls form-check form-switch">
-                        <input type="checkbox" class="form-check-input" id="treeFilter" role="switch">
-                        <label class="form-check-label" for="treeFilter">Tree Nuts</label>
-                    </div>
-                    <div class="filter-controls form-check form-switch">
-                        <input type="checkbox" class="form-check-input" id="dairyFilter" role="switch">
-                        <label class="form-check-label" for="dairyFilter">Dairy</label>
-                    </div>
+                <div class="filters container" id="filters">
+                    <div class="row">
+                        <div class="col">
+                            <div class="filter-controls form-check form-switch">
+                                <input type="checkbox" class="form-check-input" id="veganFilter" role="switch">
+                                <label class="form-check-label" for="veganFilter">Vegan</label>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="filter-controls form-check form-switch">
+                                <input type="checkbox" class="form-check-input" id="vegetarianFilter" role="switch">
+                                <label class="form-check-label" for="vegetarianFilter">Vegetarian</label>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="filter-controls form-check form-switch">
+                                <input type="checkbox" class="form-check-input" id="treeFilter" role="switch">
+                                <label class="form-check-label" for="treeFilter">Tree Nuts</label>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="filter-controls form-check form-switch">
+                                <input type="checkbox" class="form-check-input" id="dairyFilter" role="switch">
+                                <label class="form-check-label" for="dairyFilter">Dairy</label>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+                <div class = "results-list list container">
+                    <a href="./recipe.html">
+                        <div class="row result">
+                            <div class="card mb-3 entry">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                      <img class="card-img" src="https://static01.nyt.com/images/2021/05/17/dining/kc-korean-bulgogi-burger/kc-korean-bulgogi-burger-mobileMasterAt3x.jpg" class="img-fluid rounded-start thumbnail">
+                                    </div>
+                                    <div class="col-md-8">
+                                      <div class="card-body entry-body" id="result1">
+                                        <h5 class="card-title" id="result1-name">Mega Burger</h5>
+                                        <p class="card-text">Step 1: Cook da patty</p>
+                                        <p class="card-text">Step 2: Put da patty between some bread</p>
+                                        <p class="card-text">Click to see all steps</p>
+                                        <p class="card-text" id="result1-tags"><small class="text-muted">Tags: Dairy, Beef</small></p>
+                                      </div>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="card mb-3 entry">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                  <img class="card-img" src="https://static.toiimg.com/thumb/53110049.cms?width=1200&height=900">
+                                </div>
+                                <div class="col-md-8">
+                                  <div class="card-body entry-body" id="result2">
+                                    <h5 class="card-title" id="result2-name">Ultra Pizza</h5>
+                                    <p class="card-text">Step 1: Make da dough</p>
+                                    <p class="card-text">Step 2: Put da toppin's on da dough</p>
+                                    <p class="card-text">Click to see all steps</p>
+                                    <p class="card-text" id="result2-tags"><small class="text-muted">Tags: Dairy, Vegetarian</small></p>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
