--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <title>iPantry Home</title>
     </head>
     <body>
-        <div main-container id="root">
+        <div class="main-container" id="root">
             <!-- Adrianna's Part -->
-            <div ingredient-list id="ingredient-list"></div>
+            <div class="ingredient-list" id="ingredient-list"></div>
 
             <!-- Alex -->
             <div class="results-list" id="results-list">
@@ -46,41 +46,45 @@
                     </div>  
                 </div>
                 <div class = "results-list list container">
-                    <a href="./recipe.html">
-                        <div class="row result">
-                            <div class="card mb-3 entry">
-                                <div class="row g-0">
-                                    <div class="col-md-4">
-                                      <img class="card-img" src="https://static01.nyt.com/images/2021/05/17/dining/kc-korean-bulgogi-burger/kc-korean-bulgogi-burger-mobileMasterAt3x.jpg" class="img-fluid rounded-start thumbnail">
-                                    </div>
-                                    <div class="col-md-8">
-                                      <div class="card-body entry-body" id="result1">
-                                        <h5 class="card-title" id="result1-name">Mega Burger</h5>
-                                        <p class="card-text">Step 1: Cook da patty</p>
-                                        <p class="card-text">Step 2: Put da patty between some bread</p>
-                                        <p class="card-text">Click to see all steps</p>
-                                        <p class="card-text" id="result1-tags"><small class="text-muted">Tags: Dairy, Beef</small></p>
-                                      </div>
-                                    </div>
-                                </div>
-                        </div>
+                    <div class="row result">
                         <div class="card mb-3 entry">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                  <img class="card-img" src="https://static.toiimg.com/thumb/53110049.cms?width=1200&height=900">
+                                  <img alt="burgah" class="img-fluid rounded-start thumbnail" src="https://static01.nyt.com/images/2021/05/17/dining/kc-korean-bulgogi-burger/kc-korean-bulgogi-burger-mobileMasterAt3x.jpg">
                                 </div>
                                 <div class="col-md-8">
-                                  <div class="card-body entry-body" id="result2">
-                                    <h5 class="card-title" id="result2-name">Ultra Pizza</h5>
-                                    <p class="card-text">Step 1: Make da dough</p>
-                                    <p class="card-text">Step 2: Put da toppin's on da dough</p>
+                                  <div class="card-body entry-body" id="result1">
+                                    <a href="./recipe.html">
+                                        <h5 class="card-title" id="result1-name">Mega Burger</h5>
+                                    </a>                                    
+                                    <p class="card-text">Step 1: Cook da patty</p>
+                                    <p class="card-text">Step 2: Put da patty between some bread</p>                                        
                                     <p class="card-text">Click to see all steps</p>
-                                    <p class="card-text" id="result2-tags"><small class="text-muted">Tags: Dairy, Vegetarian</small></p>
+                                    <p class="card-text" id="result1-tags"><small class="text-muted">Tags: Dairy, Beef</small></p>
                                   </div>
                                 </div>
                             </div>
                         </div>
-                    </a>
+                        <div class="card mb-3 entry">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                <img alt="piza" class="img-fluid rounded-start thumbnail" src="https://static.toiimg.com/thumb/53110049.cms?width=1200&height=900">
+                                </div>
+                                <div class="col-md-8">
+                                <div class="card-body entry-body" id="result2">
+                                    <a href="./recipe.html">
+                                        <h5 class="card-title" id="result2-name">Ultra Pizza</h5>
+                                    </a>
+                                    <p class="card-text">Step 1: Make da dough</p>
+                                    <p class="card-text">Step 2: Put da toppin's on da dough</p>
+                                    <p class="card-text">Click to see all steps</p>
+                                    <p class="card-text" id="result2-tags"><small class="text-muted">Tags: Dairy, Vegetarian</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 </div>
             </div>
         </div>
