Added initial HTML for ingredient list

--- a/index.html
+++ b/index.html
@@ -13,8 +13,23 @@
     <body>
         <div class="main-container" id="root">
             <!-- Adrianna's Part -->
-            <div class="ingredient-list" id="ingredient-list"></div>
-
+            <div class="ingredient-list" id="ingredient-list">
+                <div class="add-ingredient">
+                    <div class="ingredient-text">
+                        <input value="Add ingredient" type="text" id="ingredient-name">
+                    </div>
+                    <div class="ingredient-date">
+                        <input type="date" id="expiration">
+                    </div>
+                </div>
+                <div class="ingredients">
+                    <ul>
+                        <li>Milk</li>
+                        <li>Eggs</li>
+                        <li>Spinach</li>
+                    </ul> 
+                </div>
+            </div>
             <!-- Alex -->
             <div class="results-list" id="results-list">
                 <div class="filters container" id="filters">
