Added link to index page on recipe go back text

--- a/recipe.html
+++ b/recipe.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap" rel="stylesheet">
-        
+
         <title>iPantry Home</title>
     </head>
     <body>
@@ -25,7 +25,7 @@
                     <!-- Go back -->
                         <div class="content-back btn">
                             <i class="fas fa-arrow-circle-left"></i>
-                            Go back
+                            <a href="./index.html">Go back</a>
                         </div>
                         <!-- Image -->
                         <div class="content-left-image"></div>
