--- a/client/index.html
+++ b/client/index.html
@@ -79,7 +79,7 @@
                             </div>  
                         </div>
                         <div class = "results-list list container">
-                            <div class="row result">
+                            <div class="row result" id="recipe-parent">
                                 <div class="card mb-3 entry">
                                     <div class="row g-0">
                                         <div class="col-md-4">
