trying to integrate html and javascript

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap" rel="stylesheet">
 
         <title>iPantry Home</title>
+        <SCRIPT DEFER SRC="index.js"></SCRIPT>
     </head>
     <body>
         <div class="main-container" id="root">
