--- a/client/recipe.html
+++ b/client/recipe.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <!-- Font Awesome Icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0/css/all.css"/>
-        <link rel="stylesheet" href="recipestyle.css">
+        <link rel="stylesheet" href="./recipestyle.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
                 <div class="content-right col-7">
                     <div class="recipe-main">
                         <!-- Recipe Name -->
-                       <div class="recipe-name">
+                       <div class="recipe-name" id="recipe-name">
                             <h2 class="recipe-subheading">Recipe Name</h2>
                             <!-- Recipe Tags -->
                             <div class="recipe-tags">
@@ -45,17 +45,17 @@
                        </div>
                        <!-- Tabs -->
                        <div class="recipe-tabs">
-                        <div class="recipe-tab">
+                        <div class="recipe-tab" id="ingredient-tab">
                             <i class="fas fa-utensils"></i>
                             <span>Ingredients</span>
                         </div>
-                        <div class="recipe-tab recipe-tab-active">
+                        <div class="recipe-tab recipe-tab-active" id="instruction-tab">
                             <i class="fas fa-book"></i>
                             <span>Steps</span>
                         </div>
                        </div>
                        <!-- Textbox Area -->
-                       <div class="recipe-detail">
+                       <div class="recipe-detail" id="recipe-details">
                            <!-- Ingredients -->
                             <ul class="recipe-detail-list">
                                 <!-- Instructions -->
@@ -77,5 +77,6 @@
                 </div>
             </div>
         </div>
+        <script src="./index.js"></script>
     </body>
 </html>
