--- a/client/recipe.html
+++ b/client/recipe.html
@@ -77,6 +77,6 @@
                 </div>
             </div>
         </div>
-        <script src="./indexRecipe.js"></script>
+        <script src="./recipe.js"></script>
     </body>
 </html>
