added support for adding ingredients

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,13 @@
                             </div>
                             <div class="col">
                                 <!-- TO DO: find or make icon -->
-                                <button type="button" class="add-ingredient"><b>+</b></button>
+                                <button type="button" class="add-ingredient" id="add-button"><b>+</b></button>
+                            </div>
+                            <div class="col">
+                                <label>
+                                    <input type="date" id="date-picker"></input>
+                                    Date acquired
+                                </label>
                             </div>
                         </div>
                         <div class="ingredient-list row">
