remove test elements from ingredients list onload now that add/update/delete work

--- a/client/index.html
+++ b/client/index.html
@@ -42,14 +42,17 @@
                             <div class="ingredient">
                                 <span id="milk">Milk</span>
                                 <button type="button" class="update-ingredient"><b>+</b></button>
+                                <button type="button" class="update-ingredient"><b>-</b></button>
                             </div>
                             <div class="ingredient">
                                 <span id="eggs">Eggs</span>
                                 <button type="button" class="update-ingredient"><b>+</b></button>
+                                <button type="button" class="update-ingredient"><b>-</b></button>
                             </div>
                             <div class="ingredient">
                                 <span id="spinach">Spinach</span>
                                 <button type="button" class="update-ingredient"><b>+</b></button>
+                                <button type="button" class="update-ingredient"><b>-</b></button>
                             </div>
                         </div>
                     </div>
