Decreased font size slightly so date acquired is on one line

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
                                 <!-- TO DO: find or make icon -->
                                 <button type="button" class="add-ingredient" id="add-button"><b>+</b></button>
                             </div>
-                            <div class="col">
+                            <div class="col date-picker-control">
                                 <label>
                                     <input type="date" id="date-picker"></input>
                                     Date acquired
