--- a/client/index.html
+++ b/client/index.html
@@ -10,14 +10,17 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap" rel="stylesheet">
-
+        <link rel="icon" type="image/png" href="./favicon.png" />
+        
         <title>iPantry Home</title>
         <SCRIPT DEFER SRC="index.js"></SCRIPT>
     </head>
     <body>
         <div class="main-container" id="root">
             <div class="row mb-3">
-                <div class="title-bar"><h1>iPantry</h1></div>
+                <div class="title-bar">
+                    <h1>iPantry</h1>
+                </div>
             </div>
             <div class="row content">
                 <div class="col-3">
