--- a/client/recipe.html
+++ b/client/recipe.html
@@ -14,7 +14,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap" rel="stylesheet">
-
+        <link rel="icon" type="image/png" href="./favicon.png" />
+        
         <title>iPantry Home</title>
     </head>
     <body>
@@ -24,8 +25,7 @@
                 <div class="content-left col-5">
                     <!-- Go back -->
                         <div class="content-back btn">
-                            <i class="fas fa-arrow-circle-left"></i>
-                            <a href="./index.html">Go back</a>
+                            <a href="./index.html"><i class="fas fa-arrow-circle-left"></i> Go back</a>
                         </div>
                         <!-- Image -->
                         <div class="content-left-image"></div>
