--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="./favicon.png" />
-        
+
         <title>iPantry Home</title>
         <SCRIPT DEFER SRC="index.js"></SCRIPT>
     </head>
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="row content">
-                <div class="col-3">
+                <div class="col-3" id="left-side-bar">
                     <!-- Adrianna's Part -->
                     <div class="ingredients container" id="ingredients">
                         <div class="new-ingredient row">
