updates to login and home pages, stylesheets

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,14 @@
         <div class="main-container" id="root">
             <div class="row mb-3">
                 <div class="title-bar">
-                    <h1>iPantry</h1>
+                    <div class="left">                    
+                        <h1>iPantry</h1>
+                    </div>
+                    <div class="right login">
+                        <a id="login-link" href="./login.html">
+                            <h2 id="login-text">log in<h2>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row content">
