--- a/client/login.html
+++ b/client/login.html
@@ -32,6 +32,8 @@
                     <p>Password</p>
                     <input id="pass" type='password'></input>
                     <input id="login-button" type ='button' value="login"></input>
+                    <input id="register-button" type ='button' value="register"></input>
+                    <p class="hidden error">TESt<p>
                 </div>
             </div>
         </div>
