Added back button to login page

--- a/client/login.html
+++ b/client/login.html
@@ -12,6 +12,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="./favicon.png" />
+        <!-- Font Awesome Icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0/css/all.css"/>
 
         <title>iPantry Home</title>
         <SCRIPT DEFER SRC="login.js"></SCRIPT>
@@ -24,6 +26,12 @@
                         <a id='homelink' href="./index.html">iPantry<a>
                     </h1>  
                 </div>
+                <div class="content-left col-5">
+                    <!-- Go back -->
+                        <div class="content-back btn">
+                            <a href="./index.html"><i class="fas fa-arrow-circle-left"></i> Back to home</a>
+                        </div>
+                    </div>
             </div>
             <div id="input-area">
                 <div id="inner-area" class="row justify-content-center text-center">
