--- a/client/login.html
+++ b/client/login.html
@@ -35,9 +35,9 @@
             </div>
             <div id="input-area">
                 <div id="inner-area" class="row justify-content-center text-center">
-                    <p>Username</p>
+                    <p><span style="font-family:sans-serif">Username</span></p>
                     <input id="user" type='text'></input>
-                    <p>Password</p>
+                    <p><span style="font-family:sans-serif">Password</span></p>
                     <input id="pass" type='password'></input>
                     <input id="login-button" type ='button' value="login"></input>
                     <input id="register-button" type ='button' value="register"></input>
