fixed error messages on login

--- a/client/login.html
+++ b/client/login.html
@@ -41,7 +41,7 @@
                     <input id="pass" type='password'></input>
                     <input id="login-button" type ='button' value="login"></input>
                     <input id="register-button" type ='button' value="register"></input>
-                    <!-- <p class="hidden error">TESt</p> -->
+                    <p class="hidden error"></p>
                 </div>
             </div>
         </div>
