made placeholder text real placeholder text

--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
                     <div class="ingredients container" id="ingredients">
                         <div class="new-ingredient row">
                             <div class="col">
-                                <input value="Add ingredient" type="text" id="ingredient-name">
+                                <input value="" placeholder="Add ingredient" type="text" id="ingredient-name">
                             </div>
                             <div class="col">
                                 <!-- TO DO: find or make icon -->
